# LifeScribe-Vault

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codex_plan.md  package-lock.json  package.json  requirements.md
apps/backend/: mypy.ini  pyproject.toml  ruff.toml  test_output.txt
apps/backend/src/lifescribe/: __init__.py
apps/backend/src/lifescribe/api/: __init__.py  app.py  auth.py  main.py
apps/backend/src/lifescribe/chat/: orchestrator.py  prompt.py  sessions.py
apps/backend/src/lifescribe/connectors/: __init__.py  base.py  catalog.py
apps/backend/src/lifescribe/ingest/: jobs.py  log.py  mime.py  pipeline.py  registry_default.py
apps/backend/src/lifescribe/llm/: base.py  openai_compatible.py  privacy.py  registry.py  secrets.py  service.py
apps/backend/src/lifescribe/migrations/: __init__.py  framework.py
apps/backend/src/lifescribe/retrieval/: chunker.py  index.py  indexer.py
apps/backend/src/lifescribe/vault/: __init__.py  errors.py  gitwrap.py  ids.py  importer.py  schemas.py  serialization.py  store.py
apps/backend/tests/: conftest.py  test_api_auth.py  test_api_chat_reindex.py  test_api_chat_send.py  test_api_chat_sessions.py  test_api_connectors.py  test_api_ingest_routes.py  test_api_llm_chat.py  test_api_llm_credential.py  test_api_llm_providers.py  test_api_retrieval.py  test_api_vault_notes.py  test_api_vault_routes.py  test_api_vault_settings.py  test_build_backend_scripts.py  test_connectors_dir.py  test_gitwrap.py  test_ids.py  test_migrations.py  test_schemas.py  test_serialization.py  test_store_batch_assets_list.py  test_store_init_open.py  test_store_write_read.py
apps/backend/tests/chat/: test_orchestrator.py  test_prompt.py  test_sessions.py
apps/backend/tests/connectors/: conftest.py  test_base.py  test_catalog.py  test_file_drop.py  test_run_connector.py
apps/backend/tests/ingest/: conftest.py  test_csv_extractor.py  test_docling_extractor.py  test_docx_extractor.py  test_html_extractor.py  test_image_extractor.py  test_jobs.py  test_json_extractor.py  test_log.py  test_markitdown_extractor.py  test_mime.py  test_pdf_extractor.py  test_pipeline.py  test_registry.py  test_router_extractor.py  test_text_extractor.py  test_xlsx_extractor.py
apps/backend/tests/integration/: test_chat_smoke.py  test_connector_contract.py  test_dashboard_smoke.py  test_end_to_end.py  test_ingest_end_to_end.py  test_ingest_reindex_hook.py  test_llm_smoke.py
apps/backend/tests/llm/: test_base.py  test_openai_compatible.py  test_privacy_guard.py  test_registry.py  test_secrets.py  test_service.py
apps/backend/tests/llm/providers/: test_github_models.py  (+1 more)
apps/backend/tests/retrieval/: test_chunker.py  test_index.py  test_indexer.py
apps/backend/tests/vault/: test_importer.py  test_schemas_vault_settings.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs  sidecar.rs
(+134 files in other folders)
